--- a/assets/fonts/B Mitra_0/style.css
+++ b/assets/fonts/B Mitra_0/style.css
@@ -1,5 +1,5 @@
 @font-face {
    font-family: 'B Mitra_0';
    font-display: swap;
-   src: url('file:///D:/src/fonts/B%20Mitra_0/font.ttf');
+   src: url('file:///C:/Users/MohamadMahdi%20Yektaie/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-03-01_061816/fonts/B%20Mitra_0/font.ttf');
 }
