--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,16 +3,6 @@
 body {
   font-family: Rubik;
 }
-.container{
-  direction: rtl;
-  text-align:right;
-}
-.navbar-dropdown.navbar-fixed-top{
-  direction: rtl;
-}
-.countdown-cont {
-direction: ltr;
-}
 .display-1 {
   font-family: 'B Zar_0';
   font-size: 4.25rem;
@@ -873,7 +863,7 @@ section.lazy-placeholder:after {
   text-align: right;
 }
 .cid-rS0FoDlf8a H2 {
-  text-align: right;
+  text-align: center;
 }
 .cid-rS04No2lUd {
   padding-top: 90px;
@@ -2123,13 +2113,13 @@ section.lazy-placeholder:after {
   background: #149dcc;
 }
 .cid-rSbcKSHt7y .progress1 .progressbar-number:before {
-  content: '98';
+  content: '100';
 }
 .cid-rSbcKSHt7y .progress2 .progressbar-number:before {
   content: '100';
 }
 .cid-rSbcKSHt7y .progress3 .progressbar-number:before {
-  content: '93';
+  content: '99';
 }
 .cid-rSbcKSHt7y .progress4 .progressbar-number:before {
   content: '70';
@@ -3110,7 +3100,7 @@ section.lazy-placeholder:after {
   background: #149dcc;
 }
 .cid-rSbkG8WamT .progress1 .progressbar-number:before {
-  content: '90';
+  content: '93';
 }
 .cid-rSbkG8WamT .progress2 .progressbar-number:before {
   content: '100';
@@ -4098,13 +4088,13 @@ section.lazy-placeholder:after {
   background: #149dcc;
 }
 .cid-rSbPUWDNKo .progress1 .progressbar-number:before {
-  content: '57';
+  content: '77';
 }
 .cid-rSbPUWDNKo .progress2 .progressbar-number:before {
-  content: '71';
+  content: '77';
 }
 .cid-rSbPUWDNKo .progress3 .progressbar-number:before {
-  content: '38';
+  content: '44';
 }
 .cid-rSbPUWDNKo .progress4 .progressbar-number:before {
   content: '70';
